<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".view.authentication.AuthActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/provider_registration_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/register_provider"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@drawable/card_top_round_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/lastname"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phonenumber"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:counterTextColor="@color/colorPrimary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_address"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/provider_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/provider_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/colorButtonText"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/already_registered"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/loginFragmentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="2"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>